@@ -1,18 +1,28 @@
 package com.fiap.tc.util;
 
+import java.io.IOException;
+import java.net.URISyntaxException;
+import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+
+import static java.lang.String.format;
 
 public class TestUtils {
 
     private TestUtils() {
     }
 
-    public static String readResourceFileAsString(Class<? extends Object> testClass, String relativeFilePath) {
+    public static String readResourceFileAsString(String relativeFilePath) {
         try {
-            return new String(Files.readAllBytes(Paths.get(testClass.getResource(relativeFilePath).toURI())), "UTF-8");
-        } catch (Exception e) {
-            throw new RuntimeException(e);
+            URL resourceUrl = TestUtils.class.getClassLoader().getResource(relativeFilePath);
+            if (resourceUrl == null) {
+                throw new IllegalArgumentException(format("File not found: %s", relativeFilePath));
+            }
+
+            return Files.readString(Paths.get(resourceUrl.toURI()));
+        } catch (IOException | URISyntaxException e) {
+            throw new RuntimeException("Error reading file: " + relativeFilePath, e);
         }
     }
 }
